--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bezier-easing": "^2.0.3",
     "leaflet": "^1.3.1",
     "leaflet-pixi-overlay": "^1.5.1",
     "pixi.js": "^4.8.0"
